2007-11-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-article-truncate-lines): Use `truncate-lines'.

	* message.el (message-send-mail-function): Fix error convention.
	(message-mailer-swallows-blank-line, message-send-mail-with-sendmail)
	(message-widen-reply, message-send-mail, message-talkative-question)
	(message-with-reply-buffer, message-generate-new-buffer-clone-locals)
	(message-clone-locals, message-send-news): Use with-current-buffer.
	(message-insert-or-toggle-importance): Remove unused var `valid'.
	(message-make-references): Remove unused var `new-references'.
	(message-make-mail-followup-to): Remove unused var `subscribed-lists'.

2007-11-22  Juanma Barranquero  <lekktu@gmail.com>

	* spam.el (spam-find-spam, spam-enter-list): Doc fixes.
	(spam-split-symbolic-return-positive): Reflow docstring.
	(spam-backends, spam-summary-exit-behavior)
	(spam-mark-ham-unread-before-move-from-spam-group)
	(spam-summary-score-preferred-header, spam-sa-learn-spam-switch)
	(spam-sa-learn-ham-switch, spam-sa-learn-unregister-switch)
	(spam-clear-cache, spam-backend-check, spam-install-backend)
	(spam-install-statistical-backend, spam-list-of-processors)
	(spam-group-processor-p, spam-split, spam-bogofilter-score)
	(spam-bsfilter-score, spam-check-bsfilter, spam-crm114-score)
	(spam-check-crm114, spam-initialize, spam-unload-hook):
	Fix typos in docstrings.

2007-11-21  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-send-mail-function): Require sendmail.

2007-11-20  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-send-mail-function): Check for smtpmail too.

	* utf7.el (utf7-encode, utf7-decode): Use coding system
	`utf-7'/`utf-7-imap' from utf-7.el' if available.

	* message.el (message-send-mail-function): New function.
	(message-send-mail-function): Set default using
	message-send-mail-function.  Adjust doc string.
	(message-send-mail-with-mailclient): New function.

2007-11-17  Richard Stallman  <rms@gnu.org>
